fix:(overflow pre)

--- a/style.css
+++ b/style.css
@@ -18,9 +18,14 @@
   --color__grapfit-light: #282C34;
   --color__sand: #E5D1BA;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap');
+
+
 body {
   background: var(--color__grapfit-dark);
   margin: 0;
+  font-family: "Signika Negative", sans-serif;
 }
 main {
   display: flex;
@@ -113,7 +118,8 @@ main {
       transform: translate(-50%, 0);
       width: 60%;
       max-height: 600px;
-      overflow: auto;
+      /* overflow: auto; */
+      /* overflow: hidden; */
       border: 6px solid var(--color__white);
     
       summary {
@@ -137,9 +143,6 @@ main {
         }
 
         span {
-          /* display: flex;
-          align-items: center;
-          justify-content: space-between; */
           display: none;
         }
       }
@@ -149,6 +152,8 @@ main {
         background-color: var(--color__fringy-flower);
         box-shadow: inset 15px 15px 15px #00000040;
         margin: 0;
+        overflow: scroll;
+        max-height: 600px;
         code {
           background: none;
           text-shadow: 0px 4px 4px rgba(0, 0, 0, .25);
